--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <hr class="solid">
 
-    <p class="developer">گەشەی پێدراوە لەلایەن  <a href="https://aminsamad.cf/" class="developer-link">ئەمین صمد</a></p>
+    <p class="developer">گەشەی پێدراوە لەلایەن  <a href="https://MARWA.GHM/" class="developer-link">MARWAN</a></p>
 
      <div class="social-icon">
         <a target="_blank" href="https://www.facebook.com/amin.samad.14418/"><img src="images/Fb.svg" ></a>
